RESOLVED FIXED57893
[Mac] WebKit2: Escape key does not stop page loads when focus is on the web page
https://bugs.webkit.org/show_bug.cgi?id=57893
Summary [Mac] WebKit2: Escape key does not stop page loads when focus is on the web page
Darin Adler
Reported 2011-04-05 15:27:27 PDT
[MAC] WebKit2: Escape key does not stop page loads when focus is on the web page
Attachments
Patch (17.48 KB, patch)
2011-04-05 17:07 PDT, Darin Adler
ap: review+
Darin Adler
Comment 1 2011-04-05 15:28:08 PDT
Darin Adler
Comment 2 2011-04-05 17:07:20 PDT
Darin Adler
Comment 3 2011-04-05 17:07:59 PDT
Alexey, this is the bug you asked me to fix.
Alexey Proskuryakov
Comment 4 2011-04-05 17:30:59 PDT
Comment on attachment 88337 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=88337&action=review > Source/WebKit2/UIProcess/PageClient.h:104 > + virtual bool executeKeypressCommand(const String& selector) = 0; Keypress may confuse someone into thinking that the command is executed when keypress is dispatched. But it's for keydown, as far as I can tell.
Darin Adler
Comment 5 2011-04-05 17:55:40 PDT
Note You need to log in before you can comment on or make changes to this bug.